# slowlog-agent

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: check_coverage_gates.py
src/slowlog_agent/: __init__.py  analyzer.py  cli.py  config.py  db.py  digest.py  doctor.py  errors.py  fetcher.py  init_wizard.py  parser.py  report.py  schemas.py
src/slowlog_agent/backends/: __init__.py  _process.py  base.py  claude.py  copilot.py
src/slowlog_agent/prompts/: analyze.md
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_analyzer.py  test_backends_claude.py  test_backends_copilot.py  test_backends_registry.py  test_cli.py  test_config.py  test_db.py  test_digest.py  test_doctor.py  test_fetcher.py  test_init_wizard.py  test_no_secrets_in_fixtures.py  test_parser.py  test_report.py  test_schemas.py
tests/fixtures/: claude_output_valid.json  copilot_output_valid.json  expected_report.md  slow_log_sample.txt
