[project]
name = "slowlog-agent"
version = "0.1.0"
description = "On-demand MySQL slow query log analysis agent using Claude"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hashir Zahoor" }]
keywords = ["mysql", "slow-query-log", "cloudwatch", "claude", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]
dependencies = [
  "click>=8.1",
  "boto3>=1.34",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "questionary>=2.0",
  "PyMySQL>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "moto[logs]>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "boto3-stubs[logs]>=1.34",
  "types-PyMySQL>=1.1",
  "detect-secrets>=1.5",
  "pre-commit>=3.7",
]

[project.scripts]
slowlog = "slowlog_agent.cli:main"

[project.urls]
Homepage = "https://github.com/hashir-Zahoor-kh/slowlog-agent"
Issues = "https://github.com/hashir-Zahoor-kh/slowlog-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slowlog_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["moto.*", "questionary.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=slowlog_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/slowlog_agent"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
